--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "start": "node --max_old_space_size=4096 ./node_modules/react-scripts/bin/react-scripts.js start",
+    "build": "node --max_old_space_size=4096 ./node_modules/react-scripts/bin/react-scripts.js build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
