--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.2",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
